--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/c-spencer/terrible.git"
   },
   "dependencies": {
-    "escodegen": "0.0.20"
+    "escodegen": "0.0.20",
+    "optimist": "0.3.7"
   }
 }
